Closed
Bug 1595093
Opened 6 years ago
Closed 6 years ago
Crash in [@ mozilla::gfx::DrawTargetRecording::DrawTargetRecording]
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla72
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | --- | fixed |
People
(Reporter: pascalc, Assigned: mattwoodrow)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-382d9499-2994-4fb3-a1b0-4600d0191108.
Top 10 frames of crashing thread:
0 xul.dll mozilla::gfx::DrawTargetRecording::DrawTargetRecording gfx/2d/DrawTargetRecording.cpp:224
1 xul.dll mozilla::gfx::Factory::CreateRecordingDrawTarget gfx/2d/Factory.cpp:424
2 xul.dll mozilla::gfx::PaintFragment::Record gfx/ipc/CrossProcessPaint.cpp:114
3 xul.dll mozilla::dom::WindowGlobalChild::RecvDrawSnapshot dom/ipc/WindowGlobalChild.cpp:359
4 xul.dll mozilla::dom::PWindowGlobalChild::OnMessageReceived ipc/ipdl/PWindowGlobalChild.cpp:548
5 xul.dll mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:8096
6 xul.dll void mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2130
7 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:2003
8 xul.dll mozilla::SchedulerGroup::Runnable::Run xpcom/threads/SchedulerGroup.cpp:295
9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
59 crashes in buildid 20191107215315
Changelog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=d271c572a9bcd008ed14bf104b2eb81949952e4c&tochange=7748cc7e9b63d86a40eb4799c0830172da579c84
Comment 1•6 years ago
|
||
Same cause as bug 1595395? (both seem to start with the same buildid and involve DrawSnapshot)
status-firefox70:
--- → unaffected
status-firefox71:
--- → unaffected
status-firefox-esr68:
--- → unaffected
Flags: needinfo?(matt.woodrow)
| Assignee | ||
Comment 2•6 years ago
|
||
This is a regression from bug 1576911, which started using DrawSnapshot for thumbnails.
We crash constructing a mozilla::gfx::DrawTargetRecording::DrawTargetRecording because aDT is nullptr.
| Assignee | ||
Comment 3•6 years ago
|
||
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/859e84396f6d
Make sure we always have a valid software backend, regardless of what prefs the user sets. r=lsalzman
Comment 5•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•