Bug 1595093 - Make sure we always have a valid software backend, regardless of what prefs the user sets. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D53718